--- a/index.html
+++ b/index.html
@@ -40,78 +40,88 @@
                 <p class="fs-6 mb-5">1 Years Experience</p>
                 <hr>
             </div>
-            <div class="d-flex justify-content-between align-content-center my-5">
-                <h1 class="display-3">Projects</h1>
-                <a href="#contact" class=" text-white border border-0 border-bottom text-decoration-none pt-3">CONTACT ME</a>
-            </div>
-            <div class="d-flex justify-content-center">
-                <div class="flex-column">
-                    <div class="card bg-transparent border border-0 text-white mb-5" style="width: 20rem;">
-                        <img src="./asset/img/Captura de tela 2023-09-15 163621.png" class="card-img-top px-3" alt="...">
-                        <div class="card-body text-start">
-                            <h3 class="card-title">Card title</h3>
-                            <p class="card-text">HTML,  CSS,  Javascript</p>
-                            <div class="d-flex justify-content-between align-content-center">
-                                <a href="#" class="text-white border border-0 border-bottom text-decoration-none pt-2">VIEW PROJECT</a>
-                                <a href="#" class="text-white border border-0 border-bottom text-decoration-none pt-2">VIEW CODE</a>
+            <div>
+                <div class="d-flex justify-content-between align-content-center my-5">
+                    <h1 class="display-3">Projects</h1>
+                    <a href="#contact" class=" text-white border border-0 border-bottom text-decoration-none pt-3">CONTACT ME</a>
+                </div>
+                <div class="d-flex justify-content-center">
+                    <div class="flex-column">
+                        <div class="card bg-transparent border border-0 text-white mb-5" style="width: 20rem;">
+                            <img src="./asset/img/Captura de tela 2023-09-15 163621.png" class="card-img-top px-3" alt="...">
+                            <div class="card-body text-start">
+                                <h3 class="card-title">Card title</h3>
+                                <p class="card-text">HTML,  CSS,  Javascript</p>
+                                <div class="d-flex justify-content-between align-content-center">
+                                    <a href="#" class="text-white border border-0 border-bottom text-decoration-none pt-2">VIEW PROJECT</a>
+                                    <a href="#" class="text-white border border-0 border-bottom text-decoration-none pt-2">VIEW CODE</a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="card bg-transparent border border-0 text-white mb-5" style="width: 20rem;">
+                            <img src="./asset/img/Captura de tela 2023-09-15 163621.png" class="card-img-top px-3" alt="...">
+                            <div class="card-body text-start">
+                                <h3 class="card-title">Card title</h3>
+                                <p class="card-text">HTML,  CSS,  Javascript</p>
+                                <div class="d-flex justify-content-between align-content-center">
+                                    <a href="#" class="text-white border border-0 border-bottom text-decoration-none pt-2">VIEW PROJECT</a>
+                                    <a href="#" class="text-white border border-0 border-bottom text-decoration-none pt-2">VIEW CODE</a>
+                                </div>
+                            </div>
+                        </div>                
+                        <div class="card bg-transparent border border-0 text-white mb-5" style="width: 20rem;">
+                            <img src="./asset/img/Captura de tela 2023-09-15 163621.png" class="card-img-top px-3" alt="...">
+                            <div class="card-body text-start">
+                                <h3 class="card-title">Card title</h3>
+                                <p class="card-text">HTML,  CSS,  Javascript</p>
+                                <div class="d-flex justify-content-between align-content-center">
+                                    <a href="#" class="text-white border border-0 border-bottom text-decoration-none pt-2">VIEW PROJECT</a>
+                                    <a href="#" class="text-white border border-0 border-bottom text-decoration-none pt-2">VIEW CODE</a>
+                                </div>
+                            </div>
+                        </div>                
+                        <div class="card bg-transparent border border-0 text-white mb-5" style="width: 20rem;">
+                            <img src="./asset/img/Captura de tela 2023-09-15 163621.png" class="card-img-top px-3" alt="...">
+                            <div class="card-body text-start">
+                                <h3 class="card-title">Card title</h3>
+                                <p class="card-text">HTML,  CSS,  Javascript</p>
+                                <div class="d-flex justify-content-between align-content-center">
+                                    <a href="#" class="text-white border border-0 border-bottom text-decoration-none pt-2">VIEW PROJECT</a>
+                                    <a href="#" class="text-white border border-0 border-bottom text-decoration-none pt-2">VIEW CODE</a>
+                                </div>
+                            </div>
+                        </div>                
+                        <div class="card bg-transparent border border-0 text-white mb-5" style="width: 20rem;">
+                            <img src="./asset/img/Captura de tela 2023-09-15 163621.png" class="card-img-top px-3" alt="...">
+                            <div class="card-body text-start">
+                                <h3 class="card-title">Card title</h3>
+                                <p class="card-text">HTML,  CSS,  Javascript</p>
+                                <div class="d-flex justify-content-between align-content-center">
+                                    <a href="#" class="text-white border border-0 border-bottom text-decoration-none pt-2">VIEW PROJECT</a>
+                                    <a href="#" class="text-white border border-0 border-bottom text-decoration-none pt-2">VIEW CODE</a>
+                                </div>
+                            </div>
+                        </div>                
+                        <div class="card bg-transparent border border-0 text-white mb-5" style="width: 20rem;">
+                            <img src="./asset/img/Captura de tela 2023-09-15 163621.png" class="card-img-top px-3" alt="...">
+                            <div class="card-body text-start">
+                                <h3 class="card-title">Card title</h3>
+                                <p class="card-text">HTML,  CSS,  Javascript</p>
+                                <div class="d-flex justify-content-between align-content-center">
+                                    <a href="#" class="text-white border border-0 border-bottom text-decoration-none pt-2">VIEW PROJECT</a>
+                                    <a href="#" class="text-white border border-0 border-bottom text-decoration-none pt-2">VIEW CODE</a>
+                                </div>
                             </div>
                         </div>
                     </div>
-                    <div class="card bg-transparent border border-0 text-white mb-5" style="width: 20rem;">
-                        <img src="./asset/img/Captura de tela 2023-09-15 163621.png" class="card-img-top px-3" alt="...">
-                        <div class="card-body text-start">
-                            <h3 class="card-title">Card title</h3>
-                            <p class="card-text">HTML,  CSS,  Javascript</p>
-                            <div class="d-flex justify-content-between align-content-center">
-                                <a href="#" class="text-white border border-0 border-bottom text-decoration-none pt-2">VIEW PROJECT</a>
-                                <a href="#" class="text-white border border-0 border-bottom text-decoration-none pt-2">VIEW CODE</a>
-                            </div>
-                        </div>
-                    </div>                
-                    <div class="card bg-transparent border border-0 text-white mb-5" style="width: 20rem;">
-                        <img src="./asset/img/Captura de tela 2023-09-15 163621.png" class="card-img-top px-3" alt="...">
-                        <div class="card-body text-start">
-                            <h3 class="card-title">Card title</h3>
-                            <p class="card-text">HTML,  CSS,  Javascript</p>
-                            <div class="d-flex justify-content-between align-content-center">
-                                <a href="#" class="text-white border border-0 border-bottom text-decoration-none pt-2">VIEW PROJECT</a>
-                                <a href="#" class="text-white border border-0 border-bottom text-decoration-none pt-2">VIEW CODE</a>
-                            </div>
-                        </div>
-                    </div>                
-                    <div class="card bg-transparent border border-0 text-white mb-5" style="width: 20rem;">
-                        <img src="./asset/img/Captura de tela 2023-09-15 163621.png" class="card-img-top px-3" alt="...">
-                        <div class="card-body text-start">
-                            <h3 class="card-title">Card title</h3>
-                            <p class="card-text">HTML,  CSS,  Javascript</p>
-                            <div class="d-flex justify-content-between align-content-center">
-                                <a href="#" class="text-white border border-0 border-bottom text-decoration-none pt-2">VIEW PROJECT</a>
-                                <a href="#" class="text-white border border-0 border-bottom text-decoration-none pt-2">VIEW CODE</a>
-                            </div>
-                        </div>
-                    </div>                
-                    <div class="card bg-transparent border border-0 text-white mb-5" style="width: 20rem;">
-                        <img src="./asset/img/Captura de tela 2023-09-15 163621.png" class="card-img-top px-3" alt="...">
-                        <div class="card-body text-start">
-                            <h3 class="card-title">Card title</h3>
-                            <p class="card-text">HTML,  CSS,  Javascript</p>
-                            <div class="d-flex justify-content-between align-content-center">
-                                <a href="#" class="text-white border border-0 border-bottom text-decoration-none pt-2">VIEW PROJECT</a>
-                                <a href="#" class="text-white border border-0 border-bottom text-decoration-none pt-2">VIEW CODE</a>
-                            </div>
-                        </div>
-                    </div>                
-                    <div class="card bg-transparent border border-0 text-white mb-5" style="width: 20rem;">
-                        <img src="./asset/img/Captura de tela 2023-09-15 163621.png" class="card-img-top px-3" alt="...">
-                        <div class="card-body text-start">
-                            <h3 class="card-title">Card title</h3>
-                            <p class="card-text">HTML,  CSS,  Javascript</p>
-                            <div class="d-flex justify-content-between align-content-center">
-                                <a href="#" class="text-white border border-0 border-bottom text-decoration-none pt-2">VIEW PROJECT</a>
-                                <a href="#" class="text-white border border-0 border-bottom text-decoration-none pt-2">VIEW CODE</a>
-                            </div>
-                        </div>
-                    </div>
+                </div>
+                <div>
+                    <img src="./asset/img/senac-logo-1.png" alt="">
+                    <p class="text-center text" >Cursando Tec. Informatica <br> 
+                            Senac - Caioba 10/12/2022 -10/12/2024</p>
+                    <img src="./asset/img/estacio-logo3.png" alt="">
+                    <p class="text-center text">Cursando Eng. Software<br> 
+                        Estacio 10/12/2023 -10/12/2027</p>
                 </div>
             </div>
         </div>
