--- a/index.html
+++ b/index.html
@@ -113,21 +113,23 @@
                                 </div>
                             </div>
                         </div>
+                        <hr>
                     </div>
                 </div>
-                <div>
-                    <img src="./asset/img/senac-logo-1.png" alt="">
-                    <p class="text-center text" >Cursando Tec. Informatica <br> 
+                <div class="mt-5">
+                    <h1 class="display-3 text-start">Formações</h1>
+                    <img src="./asset/img/senac-logo-1.png" alt="" class="mt-5">
+                    <p class="text-center fs-6" >Cursando Tec. Informatica <br> 
                             Senac - Caioba 10/12/2022 -10/12/2024</p>
-                    <img src="./asset/img/estacio-logo3.png" alt="">
-                    <p class="text-center text">Cursando Eng. Software<br> 
+                    <img src="./asset/img/estacio-logo3.png" alt="" class="mt-3">
+                    <p class="text-center fs-6">Cursando Eng. Software<br> 
                         Estacio 10/12/2023 -10/12/2027</p>
                 </div>
             </div>
         </div>
     </main>
     <footer id="contact">
-        <div class="container text-white d-flex justify-content-center px-3 ">
+        <div class="container text-white d-flex justify-content-center px-3 mt-5">
             <div class="flex-column text-center">
                 <h1 class="display-3 mt-4">Contact</h1>
                 <p>I would love to hear about your project and how i could help. Please fill in the form, and I'II get back to you as sonn as possible</p>
