--- a/index.html
+++ b/index.html
@@ -9,104 +9,129 @@
     <title>Portifolio</title>
 </head>
 <body>
-    <header class="container text-white px-5 d-flex justify-content-center px-5 mt-4">
-        <div class="flex-column">
-            <h2>adryanszenczuk</h2>
-            <div class="d-flex justify-content-center">
-                <a class="bi bi-github text-white me-3 h2" href="https://github.com/adryanszencz"></a>
-                <a class="bi bi-linkedin text-white  h2" href="https://www.linkedin.com/in/adryan-szenczuk-5018401a1/"></a>
-            </div>
-        </div>
-    </header>
-    <main class="container text-white d-flex justify-content-center px-3">
-        <div class="flex-column text-center mt-3">
-            <div>
-                <div class="my-3">
-                    <img src="./asset/img/Captura de tela 2023-09-15 162054.png" alt="">
+    <div class="backColor">
+        <header class="container text-white pt-3">
+            <div class="row d-flex justify-content-between mb-3">
+                <div class="col-md-4"> <h2 class="text-center">adryanszenczuk</h2></div>
+                <div class="col-md-4 ms-auto">
+                    <div class="d-flex justify-content-center justify-content-md-end">
+                        <a class="bi bi-github text-white me-3 h2" href="https://github.com/adryanszencz"></a>
+                        <a class="bi bi-linkedin text-white  h2" href="https://www.linkedin.com/in/adryan-szenczuk-5018401a1/"></a>
+                    </div>
                 </div>
-                <h1 class="display-3">Nice to meet you! <br> I'm Adryan Szenczuk</h1>
-                <p class="fs-6">Based in the UK, I'm a front-end developer passionate about building accessible web apps that users love.</p>
-                <a href="#contact" class=" text-white border border-0 border-bottom text-decoration-none fs-5"> CONTACT ME</a>
-                <hr class="mt-5">
             </div>
-            <div>
-                <h1 class="display-3 fw-semibold mt-5">HTML</h1>
-                <p class="fs-6">1 Years Experience</p>
-                <h1 class="display-3 fw-semibold mt-5">CSS</h1>
-                <p class="fs-6">1 Years Experience</p>
-                <h1 class="display-3 fw-semibold mt-5">Javascript</h1>
-                <p class="fs-6">1 Years Experience</p>
-                <h1 class="display-3 fw-semibold mt-5">PHP</h1>
-                <p class="fs-6 mb-5">1 Years Experience</p>
+        </header>
+        
+        <main class="container text-white d-flex justify-content-center px-3 mt-5">
+            <div class="flex-column text-center">
+                <div class="container text-center text-md-start">
+                    <div class="row row-cols-1 row-cols-md-2">
+                        <div class="col-md-4  order-md-1 d-flex justify-content-md-end justify-content-center">
+                            <img src="./asset/img/Captura de tela 2023-09-15 162054.png" alt="" style="width: 15rem;">
+                        </div>
+                        <div class="col-md-7">
+                            <h1 class="display-3">Nice to meet you! <br> I'm Adryan Szenczuk</h1>
+                            <p class="fs-6">Based in the UK, I'm a front-end developer passionate about building accessible web apps that users love.</p>
+                            <a href="#contact" class=" text-white border border-0 border-bottom text-decoration-none fs-5"> CONTACT ME</a>
+                        </div>
+                    </div>
+                </div>
                 <hr>
-            </div>
-            <div>
+                <div class="row row-cols-1 row-cols-md-2 g-4 mt-3">
+                    <div class="col">
+                        <h1 class="display-3 fw-semibold">HTML</h1>
+                        <p class="fs-6">1 Years Experience</p>
+                    </div>
+                    <div class="col">
+                        <h1 class="display-3 fw-semibold ">CSS</h1>
+                        <p class="fs-6">1 Years Experience</p>
+                    </div>
+                    <div class="col">
+                        <h1 class="display-3 fw-semibold ">Javascript</h1>
+                        <p class="fs-6">1 Years Experience</p>
+                    </div>
+                    <div class="col">
+                        <h1 class="display-3 fw-semibold ">PHP</h1>
+                        <p class="fs-6 mb-5">1 Years Experience</p>
+                    </div>
+                </div>
+                <hr>
                 <div class="d-flex justify-content-between align-content-center my-5">
                     <h1 class="display-3">Projects</h1>
                     <a href="#contact" class=" text-white border border-0 border-bottom text-decoration-none pt-3">CONTACT ME</a>
                 </div>
-                <div class="d-flex justify-content-center">
-                    <div class="flex-column">
-                        <div class="card bg-transparent border border-0 text-white mb-5" style="width: 20rem;">
-                            <img src="./asset/img/Captura de tela 2023-09-15 163621.png" class="card-img-top px-3" alt="...">
-                            <div class="card-body text-start">
-                                <h3 class="card-title">Card title</h3>
-                                <p class="card-text">HTML,  CSS,  Javascript</p>
+                <div class="row row-cols-1 row-cols-md-2 g-4 ">
+                    <div class="col d-flex justify-content-center">
+                        <div class="card bg-transparent border border-0 text-white mb-5" style="width: 25rem;">
+                            <img src="./asset/img/Captura de tela 2023-09-15 163621.png" class="card-img-top" alt="...">
+                            <div class="card-body">
+                                <h3 class="card-title text-start">Card title</h3>
+                                <p class="card-text  text-start">HTML,  CSS,  Javascript</p>
                                 <div class="d-flex justify-content-between align-content-center">
                                     <a href="#" class="text-white border border-0 border-bottom text-decoration-none pt-2">VIEW PROJECT</a>
                                     <a href="#" class="text-white border border-0 border-bottom text-decoration-none pt-2">VIEW CODE</a>
                                 </div>
                             </div>
                         </div>
-                        <div class="card bg-transparent border border-0 text-white mb-5" style="width: 20rem;">
-                            <img src="./asset/img/Captura de tela 2023-09-15 163621.png" class="card-img-top px-3" alt="...">
-                            <div class="card-body text-start">
-                                <h3 class="card-title">Card title</h3>
-                                <p class="card-text">HTML,  CSS,  Javascript</p>
+                    </div>
+                    <div class="col d-flex justify-content-center">
+                        <div class="card bg-transparent border border-0 text-white mb-5" style="width: 25rem;">
+                            <img src="./asset/img/Captura de tela 2023-09-15 163621.png" class="card-img-top" alt="...">
+                            <div class="card-body">
+                                <h3 class="card-title text-start">Card title</h3>
+                                <p class="card-text  text-start">HTML,  CSS,  Javascript</p>
                                 <div class="d-flex justify-content-between align-content-center">
                                     <a href="#" class="text-white border border-0 border-bottom text-decoration-none pt-2">VIEW PROJECT</a>
                                     <a href="#" class="text-white border border-0 border-bottom text-decoration-none pt-2">VIEW CODE</a>
                                 </div>
                             </div>
-                        </div>                
-                        <div class="card bg-transparent border border-0 text-white mb-5" style="width: 20rem;">
-                            <img src="./asset/img/Captura de tela 2023-09-15 163621.png" class="card-img-top px-3" alt="...">
-                            <div class="card-body text-start">
-                                <h3 class="card-title">Card title</h3>
-                                <p class="card-text">HTML,  CSS,  Javascript</p>
+                        </div>
+                    </div>
+                    <div class="col d-flex justify-content-center">
+                        <div class="card bg-transparent border border-0 text-white mb-5" style="width: 25rem;">
+                            <img src="./asset/img/Captura de tela 2023-09-15 163621.png" class="card-img-top" alt="...">
+                            <div class="card-body">
+                                <h3 class="card-title text-start">Card title</h3>
+                                <p class="card-text  text-start">HTML,  CSS,  Javascript</p>
                                 <div class="d-flex justify-content-between align-content-center">
                                     <a href="#" class="text-white border border-0 border-bottom text-decoration-none pt-2">VIEW PROJECT</a>
                                     <a href="#" class="text-white border border-0 border-bottom text-decoration-none pt-2">VIEW CODE</a>
                                 </div>
                             </div>
-                        </div>                
-                        <div class="card bg-transparent border border-0 text-white mb-5" style="width: 20rem;">
-                            <img src="./asset/img/Captura de tela 2023-09-15 163621.png" class="card-img-top px-3" alt="...">
-                            <div class="card-body text-start">
-                                <h3 class="card-title">Card title</h3>
-                                <p class="card-text">HTML,  CSS,  Javascript</p>
+                        </div>
+                    </div>
+                    <div class="col d-flex justify-content-center">
+                        <div class="card bg-transparent border border-0 text-white mb-5" style="width: 25rem;">
+                            <img src="./asset/img/Captura de tela 2023-09-15 163621.png" class="card-img-top" alt="...">
+                            <div class="card-body">
+                                <h3 class="card-title text-start">Card title</h3>
+                                <p class="card-text  text-start">HTML,  CSS,  Javascript</p>
                                 <div class="d-flex justify-content-between align-content-center">
                                     <a href="#" class="text-white border border-0 border-bottom text-decoration-none pt-2">VIEW PROJECT</a>
                                     <a href="#" class="text-white border border-0 border-bottom text-decoration-none pt-2">VIEW CODE</a>
                                 </div>
                             </div>
-                        </div>                
-                        <div class="card bg-transparent border border-0 text-white mb-5" style="width: 20rem;">
-                            <img src="./asset/img/Captura de tela 2023-09-15 163621.png" class="card-img-top px-3" alt="...">
-                            <div class="card-body text-start">
-                                <h3 class="card-title">Card title</h3>
-                                <p class="card-text">HTML,  CSS,  Javascript</p>
+                        </div>
+                    </div>
+                    <div class="col d-flex justify-content-center">
+                        <div class="card bg-transparent border border-0 text-white mb-5" style="width: 25rem;">
+                            <img src="./asset/img/Captura de tela 2023-09-15 163621.png" class="card-img-top" alt="...">
+                            <div class="card-body">
+                                <h3 class="card-title text-start">Card title</h3>
+                                <p class="card-text  text-start">HTML,  CSS,  Javascript</p>
                                 <div class="d-flex justify-content-between align-content-center">
                                     <a href="#" class="text-white border border-0 border-bottom text-decoration-none pt-2">VIEW PROJECT</a>
                                     <a href="#" class="text-white border border-0 border-bottom text-decoration-none pt-2">VIEW CODE</a>
                                 </div>
                             </div>
-                        </div>                
-                        <div class="card bg-transparent border border-0 text-white mb-5" style="width: 20rem;">
-                            <img src="./asset/img/Captura de tela 2023-09-15 163621.png" class="card-img-top px-3" alt="...">
-                            <div class="card-body text-start">
-                                <h3 class="card-title">Card title</h3>
-                                <p class="card-text">HTML,  CSS,  Javascript</p>
+                        </div>
+                    </div>
+                    <div class="col d-flex justify-content-center">
+                        <div class="card bg-transparent border border-0 text-white mb-5" style="width: 25rem;">
+                            <img src="./asset/img/Captura de tela 2023-09-15 163621.png" class="card-img-top" alt="...">
+                            <div class="card-body">
+                                <h3 class="card-title text-start">Card title</h3>
+                                <p class="card-text  text-start">HTML,  CSS,  Javascript</p>
                                 <div class="d-flex justify-content-between align-content-center">
                                     <a href="#" class="text-white border border-0 border-bottom text-decoration-none pt-2">VIEW PROJECT</a>
                                     <a href="#" class="text-white border border-0 border-bottom text-decoration-none pt-2">VIEW CODE</a>
@@ -115,32 +140,60 @@
                         </div>
                     </div>
                 </div>
-                <div>
-                    <img src="./asset/img/senac-logo-1.png" alt="">
-                    <p class="text-center text" >Cursando Tec. Informatica <br> 
-                            Senac - Caioba 10/12/2022 -10/12/2024</p>
-                    <img src="./asset/img/estacio-logo3.png" alt="">
-                    <p class="text-center text">Cursando Eng. Software<br> 
-                        Estacio 10/12/2023 -10/12/2027</p>
+                <hr>
+                <div class="mt-5 pb-5">
+                    <h1 class="text-start display-3">Formações</h1>
+                    <div class="row mt-5">
+                        <div class="col-sm me-5">
+                            <div class="flex-column">
+                                <div class=" d-flex justify-content-center my-4">
+                                    <img src="./asset/img/senac-logo-1.png" alt="">
+                                </div>
+                                    <p class="text-center text" >Cursando Tec. Informatica <br> 
+                                        Senac - Caioba 10/12/2022 -10/12/2024</p>
+                            </div>
+                        </div>
+                        <div class="col-sm d-flex align-items-center justify-content-center">
+                            <div class="flex-column">
+                                <div class=" d-flex justify-content-center my-4">
+                                    <img src="./asset/img/estacio-logo3.png" alt="">
+                                </div>
+                                <p class="text-center text">Cursando Eng. Software<br> 
+                                    Estacio 10/12/2023 -10/12/2027</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </main>
+    </div>
+    <footer class="container text-white mt-4" id="contact">
+        <div class="row row-cols-1 row-cols-md-2 g-4 ">
+            <div class="col d-flex justify-content-center px-4">
+                <div class="flex-column text-center">
+                    <h1 class="display-3 mt-4">Contact</h1>
+                    <p>I would love to hear about your project and how i could help. Please fill in the form, and I'II get back to you as sonn as possible</p>
+                </div>
+            </div>
+            <div class="col d-flex justify-content-center">
+                <div class="flex-column">
+                    <input type="text" placeholder="EMAIL" class="form-control text-white bg-transparent border border-0 border-bottom mb-3 w-100 fs-4" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-lg">
+                    <input type="text" placeholder="EMAIL" class="form-control text-white bg-transparent border border-0 border-bottom mb-3 w-100 fs-4" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-lg">
+                    <div class="input-group w-100 h-25" ><textarea class="form-control text-white bg-transparent border border-0 border-bottom mb-3 fs-4" aria-label="With textarea" ></textarea></div>
+                    <br>
+                    <div class="d-flex justify-content-end">
+                        <a href="#" class="text-white border border-0 border-bottom text-decoration-none pt-2">VIEW CODE</a>
+                    </div>
                 </div>
             </div>
         </div>
-    </main>
-    <footer id="contact">
-        <div class="container text-white d-flex justify-content-center px-3 ">
-            <div class="flex-column text-center">
-                <h1 class="display-3 mt-4">Contact</h1>
-                <p>I would love to hear about your project and how i could help. Please fill in the form, and I'II get back to you as sonn as possible</p>
-                <input type="text" placeholder="EMAIL" class="form-control text-white bg-transparent border border-0 border-bottom mb-3 w-75 fs-4" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-lg">
-                <input type="text" placeholder="EMAIL" class="form-control text-white bg-transparent border border-0 border-bottom mb-3 w-75 fs-4" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-lg">
-                <div class="input-group w-75 h-25" ><textarea class="form-control text-white bg-transparent border border-0 border-bottom mb-3 fs-4" aria-label="With textarea" ></textarea></div>
-                <br>
-                <a href="#" class="text-white border border-0 border-bottom text-decoration-none pt-2">VIEW PROJECT</a>
-                <hr>
-                <h3>adryanszenczuk</h3>
-                <div class="d-flex justify-content-center">
-                    <a class="bi bi-github text-white me-3 h3" href="https://github.com/adryanszencz"></a>
-                    <a class="bi bi-linkedin text-white  h3" href="https://www.linkedin.com/in/adryan-szenczuk-5018401a1/"></a>
+        <hr>
+        <div class="row d-flex justify-content-between mb-3">
+            <div class="col-md-4"> <h2 class="text-center">adryanszenczuk</h2></div>
+            <div class="col-md-4 ms-auto">
+                <div class="d-flex justify-content-center justify-content-md-end">
+                    <a class="bi bi-github text-white me-3 h2" href="https://github.com/adryanszencz"></a>
+                    <a class="bi bi-linkedin text-white  h2" href="https://www.linkedin.com/in/adryan-szenczuk-5018401a1/"></a>
                 </div>
             </div>
         </div>
