--- a/index.html
+++ b/index.html
@@ -56,9 +56,9 @@
                     </div>
                 </div>
                 <hr>
-                <div class="d-flex justify-content-between align-content-center my-5">
+                <div class="d-flex justify-content-between my-5">
                     <h1 class="display-3">Projects</h1>
-                    <a href="#contact" class=" text-white border border-0 border-bottom text-decoration-none pt-3">CONTACT ME</a>
+                    <a href="#contact" class=" text-white pt-5 border border-0 border-bottom text-decoration-none ">CONTACT ME</a>
                 </div>
                 <div class="row row-cols-1 row-cols-md-2 g-4 ">
                     <div class="col d-flex justify-content-center">
