--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                 </div>
                 <hr>
                 <div class="d-flex justify-content-between my-5">
-                    <h1 class="display-3">Projects</h1>
+                    <a href="https://adryanszencz.github.io/Projetos/" class="display-3 text-decoration-none text-white">Projects</a>
                     <a href="#contact" class=" text-white pt-5 border border-0 border-bottom text-decoration-none ">CONTACT ME</a>
                 </div>
                 <div class="row row-cols-1 row-cols-md-2 g-4 ">
